--- a/Interactive banner by spr/index.html
+++ b/Interactive banner by spr/index.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <title>Animated Banner with Parallax</title>
 <link rel="stylesheet" type="text/css" href="css/style.css" />
+<meta name="author" content="Shekhar Prasad Rajak">
+<link rel="shortcut icon" href="images/spr.png">
 </head>
 
 <body>
